# noaa-climate-normals

./: README-template.md  docker_env  environment.yml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
docs/_static/: noaa-climate-normals-listing.html
scripts/: check_schema.py
src/stactools/noaa_climate_normals/: __init__.py  commands.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/normals-monthly/1991-2020/access/: USC00055116.csv
