[metadata]
name = stactools-noaa-climate-normals
version = attr: stactools.noaa_climate_normals.__version__
description = stactools package for working with NOAA Climate Normals dataset
long_description = file: README.md
long_description_content_type = text/markdown
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
url = https://github.com/stactools-packages/noaa-climate-normals
project_urls =
    Documentation = https://stactools-noaa-climate-normals.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/noaa-climate-normals/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools ~= 0.2.4

[options.packages.find]
where = src
